# bencode

./: CMakeLists.txt  LICENSE  README.md
include/: metadata.h  types.h
src/: CMakeLists.txt  metadata.cpp
test/: CMakeLists.txt  metadata_tests.cpp
